Change UI of about and contact & Rename project_member to index 1. Add more option in user navbar

--- a/css/common.css
+++ b/css/common.css
@@ -16,6 +16,10 @@ nav a {
   font-size: 22px;
 }
 
+.font-Staatliches {
+  font-family: "Staatliches", cursive !important;
+}
+
 .font-Staatliches-heading {
   font-family: "Staatliches", cursive !important;
   font-size: 50px !important;
